--- a/index.htm
+++ b/index.htm
@@ -7,9 +7,9 @@
     <title>Document</title>
 
     <!-- 基本资源库 组件资源 -->
-    <script src='js/lib/jquery-3.2.1.min.js'></script>
-    <script src='js/lib/jquery-ui.min.js'></script>
-    <script src='js/lib/jquery.fullpage.js'></script>
+    <script src='./js/lib/jquery-3.2.1.min.js'></script>
+    <script src='./js/lib/jquery-ui.min.js'></script>
+    <script src='./js/lib/jquery.fullpage.js'></script>
 
     <!-- 加载H5 相关资源 -->
     <script>
