--- a/index.htm
+++ b/index.htm
@@ -16,14 +16,14 @@
         var resourse = ['Base','Pie','ring','ringAll','Bar','Point','PolyLine','Radar'];
         var resArr = [];
         for(var s in resourse){
-            resArr.push('<script src="js/H5Component'+ resourse[s] +'.js"><\/script>');
-            resArr.push('<link rel="stylesheet" href="css/H5Component'+ resourse[s] +'.css">');
+            resArr.push('<script src="./js/H5Component'+ resourse[s] +'.js"><\/script>');
+            resArr.push('<link rel="stylesheet" href="./css/H5Component'+ resourse[s] +'.css">');
         }
         document.write(resArr.join(''))
     </script>
 
     <!-- H5对象资源 && 管理内容：页-组件  -->
-    <script src='js/H5.js'></script>
+    <script src='./js/H5.js'></script>
     <link rel="stylesheet" href="css/H5.css">
     
     <!-- 页面逻辑样式 -->
