--- a/index.htm
+++ b/index.htm
@@ -24,7 +24,7 @@
 
     <!-- H5对象资源 && 管理内容：页-组件  -->
     <script src='./js/H5.js'></script>
-    <link rel="stylesheet" href="css/H5.css">
+    <link rel="stylesheet" href="./css/H5.css">
     
     <!-- 页面逻辑样式 -->
     <style>
