--- a/index.htm
+++ b/index.htm
@@ -9,11 +9,11 @@
     <!-- 基本资源库 组件资源 -->
     <script src='./js/lib/jquery-3.2.1.min.js'></script>
     <script src='./js/lib/jquery-ui.min.js'></script>
-    <script src='./js/lib/jquery.fullpage.js'></script>
+    <script src='./js/lib/jquery.fullPage.js'></script>
 
     <!-- 加载H5 相关资源 -->
     <script>
-        var resourse = ['Base','Pie','ring','ringAll','Bar','Point','PolyLine','Radar'];
+        var resourse = ['Base','Pie','Ring','RingAll','Bar','Point','PolyLine','Radar'];
         var resArr = [];
         for(var s in resourse){
             resArr.push('<script src="./js/H5Component'+ resourse[s] +'.js"><\/script>');
